# A2A-Multi-Agents-AgentCore

./: .gitignore  README.md  a2a_communication_compliant.py  pyproject.toml  streamlit_app.py
.github/workflows/: jekyll-gh-pages.yml
A2A/: .env.example  README.md  a2a_communication_compliant.py
A2A/agentic_cards/: monitoring_skills.json  operations_skills.json
A2A/host_adk/: agent.py  remote_agent_connection.py
A2A/monitoring_agent_a2a/: __main__.py  agent_executer.py  config.yaml  utils.py
A2A/remediation_agent_a2a/: __main__.py  agent_executer.py  config.yaml  utils.py
deletion_scripts/: delete_gateways.py
gateway_primitive/: gateway_primitive_simple.py
multi-agents/: COMPREHENSIVE_README.md  README.md  config.yaml  constants.py  memory_hook.py  test_invoke.py  utils.py
multi-agents/docs/: _config.yml  a2a-protocol.md  bring-your-own-agent.md  index.md  monitoring-agent.md  ops-orchestrator-agent.md
multi-agents/monitoring_agent/: .env.observability  README-observability.md  README.md  README_DEMO.md  README_LAMBDA.md  README_STREAMLIT.md  RUNTIME_SETUP.md  __main__.py  agent_runtime.py  config.yaml  constants.py  deploy_lambda.sh  enhanced_streamlit_app.py  interactive_agent.py  invoke_with_token.py  lambda_function.py  mcp_credentials.json  monitoring_agent.py  requirements-observability.txt  requirements.txt  run_demo.py  run_interactive.sh  run_with_observability.py  streamlit_app.py  test.py  utils.py
multi-agents/ops_orchestrator_agent/: .env.example  README.md  README_KEYCLOAK_SETUP.md  config.yaml  config_keycloak_example.yaml  gateway_keycloak_integration.py  requirements.txt  (+11 more)
runtime_primitive/: .bedrock_agentcore.yaml  Dockerfile  get_weather_agent_runtime.py  invoke_agent_runtime.py  requirements.txt
(+24 files in other folders)
