[project]
name = "genesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=0.0.1",
    "pip>=25.1.1",
    "strands-agents>=0.3.0",
    "strands-agents-tools>=0.1.9",
    "zmq>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genesis_agent_runtime.py"]
