[project]
name = "genesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "pip>=25.1.1",
    "pyyaml>=6.0.2",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.1",
    "zmq>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genesis_agent_runtime.py"]
